2002-05-21  Stefan Lucke <Stefan.Lucke1@epost.de>
	* avoid remaining shared memory segment after playdv crash
	* avoid decoder crash (bug #231580, #558590 etc.). There are some
	  viewable decoding errors now.
	* new clamping for NTSC Xv mmx + half high render.

2002-05-19  Stefan Lucke <Stefan.Lucke1@epost.de>
	* new clamping and addtitional half high renderer of PAL Xv mmx.
	* modified format of audio error reporting
	* additional error reporting of video errors
	  example of messages written to stderr
		ver 00:01:18.21 2001-11-11 14:26:34 9f a7 37 a8
		abf 00:01:40.18 2001-11-11 14:26:56 7f 37 00 12

2002-05-17  Dan Dennedy <dan@dennedy.org>
	* apply patch from Daniel Kobras (bug 544185) to fix compile on
	  non-x86 architecture.
	  
	* add const qualifier to input buffer parameter on
	  dv_decode_full_audio, dv_parse_audio_header, dv_update_num_samples,
	  and dv_decode_audio_block. This makes Kino's Frame::ExtractAudio
	  happy.

2002-05-01  Stefan Lucke <Stefan.Lucke1@epost.de>
	* audio error correction:
	    default error reporting is set to: stderr
	      old_file = dv_set_error_log (decoder, stderr)      
      
	    default correction method is set to: DV_AUDIO_CORRECT_AVERAGE
	      old_method = dv_set_audio_correction (decoder, NEW_METHOD);      
	      NEW_METHOD = DV_AUDIO_CORRECT_NONE |
	                   DV_AUDIO_CORRECT_AVERAGE |
	                   DV_AUDIO_CORRECT_SILENCE
          
	* updated my old invalid email addresses 
  
2002-04-07  Charles 'Buck' Krasic  <krasic@acm.org>
	* Version 0.9.5

	* Build fixups for 0.9.5 release.  For now, stop using an
	  auxiliary directory (was config).  The current release of
	  libtool has a bug where it looks to configure.in for that, which
	  we no longer have, and so it gets terribly confused.  Some
	  changes to bootstrap to get the right versions of autotools.
	  This needs more work.  Autotools sure can be a pain.
	
2002-04-04  Dan Dennedy <dan@dennedy.org>