@@ -37,6 +37,7 @@
 #include <stdlib.h>
 #include <stdint.h>
 #include <stdio.h>
+#include <time.h>
 
 /* please tell me these are defined somewhere standard??? */
 #ifndef FALSE
